# PEA-projekt

./: README.md
BF/: CMakeLists.txt  algo.h  brute_force.cpp  conf.ini  main.cpp  zadanie1
Branch and Bound/: Branch_Bound.cpp  Branch_Bound.h  CMakeLists.txt  conf.ini  gr17.txt  gr21.txt  main.cpp  matrix.cpp  matrix.h  zadanie2
GA/: CMakeLists.txt  Genetic.cpp  Genetic.h  Menu.cpp  Menu.h  PEA-Projekt.cpp  conf.ini
Tabu Search/: CMakeLists.txt  Tabu.cpp  Tabu.h  conf.ini  main.cpp  matrix.cpp  matrix.h
instancje/: gr21.txt  gr24.txt  pcb442.tsp  tsp_403.txt  tsp_443.txt
